# blusys

./: .gitignore  AGENTS.md  APP_MANIFEST_REFACTOR_PLAN.md  CHANGELOG.md  CLAUDE.md  CPP-transition.md  IMPLEMENTATION_PLAN.md  PLATFORM_RESTRUCTURE.md  PRD.md  PROGRESS.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  UI-system.md  all-features.md  blusys  blusys.sh  build.sh  build_examples.sh  clean.sh  configure.sh  docs-refactor-plan.md  flash.sh  idf-common.sh  implementation_report.md  install.sh  inventory.yml  mkdocs.yml  monitor.sh  refinement-plan.md  run.sh
components/blusys/: CMakeLists.txt  Kconfig  idf_component.yml
components/blusys/include/blusys/: adc.h  ble_gatt.h  bluetooth.h  blusys.h  blusys.hpp  button.h  console.h  error.h  espnow.h  fs.h  gpio.h  http_client.h  http_server.h  i2c.h  i2c_slave.h  i2s.h  led_strip.h  log.h  mcpwm.h  mqtt.h  nvs.h  one_wire.h  ota.h  power_mgmt.h  rmt.h  sd_spi.h  sdm.h  sdmmc.h  sleep.h  target.h  temp_sensor.h  timer.h  touch.h  twai.h  uart.h  ulp.h  usb_device.h  version.h  wifi.h  wifi_prov.h
components/blusys/sources/: drivers.cmake  framework.cmake  hal.cmake  services.cmake
components/blusys/src/common/: adc.c  ble_gatt.c  bluetooth.c  button.c  console.c  dac.c  error.c  espnow.c  fatfs.c  fs.c  gpio.c  gpio_expander.c  http_client.c  http_server.c  i2c.c  i2c_slave.c  i2s.c  i2s_rx.c  lcd.c  led_strip.c  mcpwm.c  mdns.c  mqtt.c  nvs.c  ota.c  pcnt.c  power_mgmt.c  pwm.c  rmt.c  rmt_rx.c  sd_spi.c  sdm.c  sdmmc.c  sleep.c  sntp.c  spi.c  spi_slave.c  system.c  target.c  temp_sensor.c  (+11 more)
components/blusys/src/drivers/: button.c  buzzer.c  dht.c  display.c  encoder.c  lcd.c  lcd_panel_ili.c  led_strip.c  seven_seg.c
components/blusys/src/hal/: adc.c  dac.c  efuse.c  error.c  gpio.c  gpio_expander.c  i2c.c  i2c_slave.c  i2s.c  i2s_rx.c  mcpwm.c  nvs.c  one_wire.c  pcnt.c  pwm.c  rmt.c  rmt_rx.c  sd_spi.c  sdm.c  sdmmc.c  sleep.c  spi.c  spi_slave.c  system.c  target.c  target_caps.c  temp_sensor.c  timer.c  touch.c  twai.c  uart.c  usb_device.c  usb_host.c  version.c  wdt.c
components/blusys/src/internal/: blusys_lock.h  blusys_lock_freertos.c  blusys_nvs_init.h  blusys_target_caps.h  blusys_timeout.h
components/blusys/src/observe/: counter.c  error_domain.c  log.c  snapshot.c
components/blusys/src/ulp/: wake_up.S
components/blusys_framework/: CMakeLists.txt  Kconfig  README.md  widget-author-guide.md
components/blusys_framework/src/app/: action_widgets.cpp  app_ctx.cpp  app_device_platform.cpp  app_headless_platform_esp.cpp  app_services.cpp  bind_capability_ptrs.cpp  bindings.cpp  button_array_bridge.cpp  capability_event_map.cpp  feedback_logging_sink.cpp  input_bridge.cpp  overlay_manager.cpp  page.cpp  screen_registry.cpp  screen_router.cpp  shell.cpp  theme_presets.cpp  touch_bridge.cpp
components/blusys_framework/src/core/: controller.cpp  feedback.cpp  feedback_presets.cpp  framework.cpp  router.cpp  runtime.cpp
components/blusys_framework/src/ui/: theme.cpp  transition.cpp  visual_feedback.cpp
components/blusys_hal/: CMakeLists.txt
components/blusys_hal/include/blusys/: blusys.h  dac.h  efuse.h  gpio_expander.h  i2c.h  nvs.h  pcnt.h  pwm.h  rmt.h  spi.h  spi_slave.h  system.h  target.h  uart.h  usb_host.h  version.h  wdt.h
components/blusys_hal/src/: dac.c  efuse.c  mcpwm.c  one_wire.c  rmt.c  spi.c  timer.c  version.c
components/blusys_hal/src/common/: adc.c  bt_stack.c  error.c  sd_spi.c  target.c  touch.c  ulp.c
components/blusys_hal/src/drivers/: button.c  buzzer.c  dht.c  encoder.c  lcd.c  led_strip.c  seven_seg.c
components/blusys_hal/src/soc/: i2c_slave.c  twai.c
components/blusys_hal/src/ulp/: gpio_watch.S
components/blusys_services/: CMakeLists.txt
components/blusys_services/include/blusys/: blusys_all.h  blusys_services.h  buzzer.h  encoder.h
components/blusys_services/src/: ble_gatt.c  bluetooth.c  button.c  buzzer.c  console.c  encoder.c  espnow.c  fatfs.c  fs.c  http_client.c  http_server.c  lcd.c  led_strip.c  mdns.c  mqtt.c  ota.c  power_mgmt.c  sntp.c  wifi.c  wifi_prov.c  ws_client.c
components/blusys_services/src/actuator/: buzzer.c
components/blusys_services/src/connectivity/: ble_gatt.c  bluetooth.c  espnow.c  mdns.c  wifi.c  wifi_mesh.c  wifi_prov.c
components/blusys_services/src/device/: console.c  fatfs.c  fs.c  local_ctrl.c  ota.c  power_mgmt.c  sntp.c
components/blusys_services/src/display/: lcd.c  led_strip.c  seven_seg.c  ui.c
components/blusys_services/src/input/: button.c  encoder.c  usb_hid.c
components/blusys_services/src/output/: display.c
components/blusys_services/src/protocol/: http_client.c  ws_client.c
components/blusys_services/src/sensor/: dht.c
components/blusys_services/src/storage/: fatfs.c  fs.c
components/blusys_services/src/system/: console.c  fatfs.c  fs.c  local_ctrl.c  ota.c  power_mgmt.c  sntp.c
examples/quickstart/edge_node/host/: CMakeLists.txt
examples/quickstart/interactive_controller/host/: CMakeLists.txt
examples/reference/gateway/host/: CMakeLists.txt
examples/reference/hal/main/: CMakeLists.txt  Kconfig.projbuild  hal_reference_main.c  ref_hal_adc_basic.c  ref_hal_button_basic.c  ref_hal_gpio_basic.c  ref_hal_i2c_scan.c  ref_hal_nvs_basic.c  ref_hal_pwm_basic.c  ref_hal_spi_loopback.c  ref_hal_timer_basic.c  ref_hal_uart.c
examples/reference/handheld_bluetooth/host/: CMakeLists.txt
scripts/host/: CMakeLists.txt  README.md  lv_conf.h
scripts/host-test/: CMakeLists.txt
scripts/host/include_host/: esp_log.h
scripts/host/src/: action_queue_drop_smoke.cpp  app_headless_demo.cpp  app_headless_platform.cpp  app_host_platform.cpp  app_interactive_demo.cpp  capability_contract_smoke.cpp  connected_headless_host.cpp  handheld_starter_reducer_smoke.cpp  hello_lvgl.c  host_harness_smoke.cpp  host_spine_test.cpp  interactive_archetype_reducer_smoke.cpp  interactive_starter_reducer_smoke.cpp  operational_phase_smoke.cpp  p0c_smoke.cpp  panel_connectivity_map_smoke.cpp  pomodoro_host_main.cpp  session_helper_smoke.cpp  snapshot_buffer_smoke.cpp  theme_presets_smoke.cpp  widget_kit_demo.cpp
(+2100 files in other folders)
